FIX: Table overflow issue; UPDATE: content;

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,7 @@ body {
     text-wrap: balance;
   }
 }
+
+.md-table-wraper {
+  overflow-x: auto;
+}
